# DualSenseY-v2

./: .gitignore  CMakeLists.txt
include/: scePadSettings.hpp
resources/translations/: ar.json  en.json  es.json  it.json  pl.json  pt.json  tr.json  zh.json
source/: client.cpp  controllerEmulation.cpp  mainWindow.cpp
